force-app/main/default/objects/IT_Request__c/fields/IT_Framework_Head_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Framework_Head_Code__c</fullName>
    <label>Framework Head Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>