force-app/main/default/objects/IT_Request__c/fields/IT_Framework_Warrant__c.field-meta.xml
<CustomField>
    <fullName>IT_Framework_Warrant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Framework Warrant</label>
    <type>Checkbox</type>
</CustomField>