force-app/main/default/objects/IT_Request__c/fields/IT_FRM_Discount_Percentage_2__c.field-meta.xml
<CustomField>
    <fullName>IT_FRM_Discount_Percentage_2__c</fullName>
    <formula>- IT_Discount_Percentage_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Percentage 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>