force-app/main/default/objects/IT_Request__c/fields/IT_FRM_Extradiscount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>IT_FRM_Extradiscount_Percentage__c</fullName>
    <formula>- IT_Extradiscount_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extradiscount Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>