force-app/main/default/objects/IT_Request__c/fields/IT_Hamlet__c.field-meta.xml
<CustomField>
    <fullName>IT_Hamlet__c</fullName>
    <label>Hamlet</label>
    <length>50</length>
    <type>Text</type>
</CustomField>