force-app/main/default/objects/IT_Request__c/fields/IT_Hamlet_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Hamlet_Code__c</fullName>
    <label>Hamlet Code</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>