force-app/main/default/objects/IT_Request__c/fields/IT_Multidiscount__c.field-meta.xml
<CustomField>
    <fullName>IT_Multidiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multidiscount</label>
    <type>Checkbox</type>
</CustomField>