force-app/main/default/objects/IT_Request__c/fields/IT_New_City__c.field-meta.xml
<CustomField>
    <fullName>IT_New_City__c</fullName>
    <label>New City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>