force-app/main/default/objects/IT_Request__c/fields/IT_New_Client__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Client__c</fullName>
    <label>New Client</label>
    <length>6</length>
    <type>Text</type>
</CustomField>