force-app/main/default/objects/IT_Request__c/fields/IT_New_Industry__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Industry__c</fullName>
    <label>New Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Industry</valueSetName>
    </valueSet>
</CustomField>