force-app/main/default/objects/IT_Request__c/fields/IT_New_Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Legal_Form__c</fullName>
    <label>New Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Legal_Form</valueSetName>
    </valueSet>
</CustomField>