force-app/main/default/objects/IT_Request__c/fields/IT_New_Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Legal_Name__c</fullName>
    <label>New Legal Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>