force-app/main/default/objects/IT_Request__c/fields/IT_New_Local_Client_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Local_Client_Segmentation__c</fullName>
    <label>New Local Client Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SUPER A</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NOT DEFINED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>