force-app/main/default/objects/IT_Request__c/fields/IT_New_Opening_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Opening_Type__c</fullName>
    <label>New Opening Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Opening</valueSetName>
    </valueSet>
</CustomField>