force-app/main/default/objects/IT_Request__c/fields/IT_New_PEC_Mail__c.field-meta.xml
<CustomField>
    <fullName>IT_New_PEC_Mail__c</fullName>
    <label>New PEC Mail</label>
    <length>60</length>
    <type>Text</type>
</CustomField>