force-app/main/default/objects/IT_Request__c/fields/IT_New_Phone__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Phone__c</fullName>
    <label>New Phone</label>
    <length>16</length>
    <type>Text</type>
</CustomField>