force-app/main/default/objects/IT_Request__c/fields/IT_New_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Postal_Code__c</fullName>
    <label>New Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>