force-app/main/default/objects/IT_Request__c/fields/IT_New_Private_work_for_Institution_Flag__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Private_work_for_Institution_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Private work for Institution Flag</label>
    <type>Checkbox</type>
</CustomField>