force-app/main/default/objects/IT_Request__c/fields/IT_New_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Sales_Manager__c</fullName>
    <label>New Sales Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>