force-app/main/default/objects/IT_Request__c/fields/IT_New_SDI__c.field-meta.xml
<CustomField>
    <fullName>IT_New_SDI__c</fullName>
    <label>New SDI</label>
    <length>7</length>
    <type>Text</type>
</CustomField>