force-app/main/default/objects/IT_Request__c/fields/IT_New_Service__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Service__c</fullName>
    <label>New Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Service</valueSetName>
    </valueSet>
</CustomField>