force-app/main/default/objects/IT_Request__c/fields/IT_New_Signatures_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Signatures_Number__c</fullName>
    <label>New Signatures Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>