force-app/main/default/objects/IT_Request__c/fields/IT_New_Split_Payment__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Split_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Split Payment</label>
    <type>Checkbox</type>
</CustomField>