force-app/main/default/objects/IT_Request__c/fields/IT_New_State__c.field-meta.xml
<CustomField>
    <fullName>IT_New_State__c</fullName>
    <label>New State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>