force-app/main/default/objects/IT_Request__c/fields/IT_New_Street__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Street__c</fullName>
    <label>New Street</label>
    <length>40</length>
    <type>Text</type>
</CustomField>