force-app/main/default/objects/IT_Request__c/fields/IT_New_Toponym__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Toponym__c</fullName>
    <label>New Toponym</label>
    <length>25</length>
    <type>Text</type>
</CustomField>