force-app/main/default/objects/IT_Request__c/fields/IT_New_Unique_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Unique_Office_Code__c</fullName>
    <label>New Unique Office Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>