force-app/main/default/objects/IT_Request__c/fields/IT_New_VAT_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_New_VAT_Number__c</fullName>
    <label>New VAT Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>