force-app/main/default/objects/IT_Request__c/fields/IT_New_Zone__c.field-meta.xml
<CustomField>
    <fullName>IT_New_Zone__c</fullName>
    <label>New Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Zone</valueSetName>
    </valueSet>
</CustomField>