force-app/main/default/objects/IT_Request__c/fields/IT_No_Cost_Reason__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Cost_Reason__c</fullName>
    <label>No Cost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_No_Cost_Reason</valueSetName>
    </valueSet>
</CustomField>