force-app/main/default/objects/IT_Request__c/fields/IT_No_Cost_Reason_F__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Cost_Reason_F__c</fullName>
    <formula>IF( NOT(ISPICKVAL (  IT_No_Cost_Reason__c  , &#39;&#39;)) , TEXT (IT_No_Cost_Reason__c  ) , TEXT(  IT_Financial_Center__r.IT_Contract__r.IT_No_Cost_Reason__c  ) )</formula>
    <label>No Cost Reason F</label>
    <type>Text</type>
</CustomField>