force-app/main/default/objects/IT_Request__c/fields/IT_No_Date_presence__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Date_presence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Date presence</label>
    <type>Checkbox</type>
</CustomField>