force-app/main/default/objects/IT_Request__c/fields/IT_No_Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Exclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Exclusivity</label>
    <type>Checkbox</type>
</CustomField>