force-app/main/default/objects/IT_Request__c/fields/IT_No_Massive_Print__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Massive_Print__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Massive Print</label>
    <type>Checkbox</type>
</CustomField>