force-app/main/default/objects/IT_Request__c/fields/IT_No_Sign_Activation_Authorization__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Sign_Activation_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Sign Activation Authorization</label>
    <type>Checkbox</type>
</CustomField>