force-app/main/default/objects/IT_Request__c/fields/IT_No_Sign_Authorization_F__c.field-meta.xml
<CustomField>
    <fullName>IT_No_Sign_Authorization_F__c</fullName>
    <formula>IF( IT_No_Sign_Activation_Authorization__c = true, IT_No_Sign_Activation_Authorization__c,  IT_Financial_Center__r.IT_Contract__r.IT_No_Sign_Activation_Authorization__c )</formula>
    <label>No Sign Authorization F</label>
    <type>Checkbox</type>
</CustomField>