force-app/main/default/objects/IT_Request__c/fields/IT_Not_Send_Contract__c.field-meta.xml
<CustomField>
    <fullName>IT_Not_Send_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Send Contract</label>
    <type>Checkbox</type>
</CustomField>