force-app/main/default/objects/IT_Request__c/fields/IT_Only_Client_Copy__c.field-meta.xml
<CustomField>
    <fullName>IT_Only_Client_Copy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Client Copy</label>
    <type>Checkbox</type>
</CustomField>