force-app/main/default/objects/IT_Request__c/fields/IT_Opening__c.field-meta.xml
<CustomField>
    <fullName>IT_Opening__c</fullName>
    <label>Opening</label>
    <length>1</length>
    <type>Text</type>
</CustomField>