force-app/main/default/objects/IT_Request__c/fields/IT_Opening_Outcome_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Opening_Outcome_F__c</fullName>
    <formula>IF(NOT(ISPICKVAL( IT_Opening_Outcome__c , &#39;&#39;)), TEXT(IT_Opening_Outcome__c),  TEXT(IT_Financial_Center__r.IT_Opening_Outcome__c ))</formula>
    <label>Opening Outcome F</label>
    <type>Text</type>
</CustomField>