force-app/main/default/objects/IT_Request__c/fields/IT_Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Opportunity_Code__c</fullName>
    <label>Opportunity Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>