force-app/main/default/objects/IT_Request__c/fields/IT_Order_Reception_Term__c.field-meta.xml
<CustomField>
    <fullName>IT_Order_Reception_Term__c</fullName>
    <label>Order Reception Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>