force-app/main/default/objects/IT_Request__c/fields/IT_Payment_Code_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Payment_Code_F__c</fullName>
    <formula>IF( NOT(ISPICKVAL (IT_Payment_Code__c, &#39;&#39;)) , TEXT (IT_Payment_Code__c) , TEXT( IT_Financial_Center__r.ER_Bank_Account__r.IT_Payment_Code__c  ) )</formula>
    <label>Payment Code F</label>
    <type>Text</type>
</CustomField>