force-app/main/default/objects/IT_Request__c/fields/IT_Payment_Progressive_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Payment_Progressive_Number__c</fullName>
    <label>Payment Progressive Number</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>