force-app/main/default/objects/IT_Request__c/fields/IT_Penal_Presence__c.field-meta.xml
<CustomField>
    <fullName>IT_Penal_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Penal Presence</label>
    <type>Checkbox</type>
</CustomField>