force-app/main/default/objects/IT_Request__c/fields/IT_Printed_Contract__c.field-meta.xml
<CustomField>
    <fullName>IT_Printed_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Printed Contract</label>
    <type>Checkbox</type>
</CustomField>