force-app/main/default/objects/IT_Request__c/fields/IT_Province__c.field-meta.xml
<CustomField>
    <fullName>IT_Province__c</fullName>
    <label>Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>