force-app/main/default/objects/IT_Request__c/fields/IT_Reason__c.field-meta.xml
<CustomField>
    <fullName>IT_Reason__c</fullName>
    <label>Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>