force-app/main/default/objects/IT_Request__c/fields/IT_Referente__c.field-meta.xml
<CustomField>
    <fullName>IT_Referente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Richieste</relationshipLabel>
    <relationshipName>Richieste</relationshipName>
    <type>Lookup</type>
</CustomField>