force-app/main/default/objects/IT_Request__c/fields/IT_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Registration_Date__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>