force-app/main/default/objects/IT_Request__c/fields/IT_Reopening_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Reopening_Date__c</fullName>
    <label>Reopening Date</label>
    <type>Date</type>
</CustomField>