force-app/main/default/objects/IT_Request__c/fields/IT_Request_Flow_Control__c.field-meta.xml
<CustomField>
    <fullName>IT_Request_Flow_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Flow Control</label>
    <type>Checkbox</type>
</CustomField>