force-app/main/default/objects/IT_Request__c/fields/IT_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>IT_Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>ACCEPTED</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>CANCELLED</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>REGISTERED</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>AUTHORIZED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>