force-app/main/default/objects/IT_Request__c/fields/IT_Road_Arch_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Road_Arch_Code__c</fullName>
    <label>Road Arch Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>