force-app/main/default/objects/IT_Request__c/fields/IT_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>IT_Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <length>4</length>
    <type>Text</type>
</CustomField>