force-app/main/default/objects/IT_Request__c/fields/IT_SDD_Authorized__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Authorized__c</fullName>
    <label>SDD Authorized</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_SDD_Authorized</valueSetName>
    </valueSet>
</CustomField>