force-app/main/default/objects/IT_Request__c/fields/IT_SDD_Contract_Code_F__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Contract_Code_F__c</fullName>
    <formula>IF( IT_SDD_Contract_Code__c!= null ,IT_SDD_Contract_Code__c,   IT_Financial_Center__r.ER_Bank_Account__r.IT_SDD_Contract_Code__c  )</formula>
    <label>SDD Contract Code F</label>
    <type>Text</type>
</CustomField>