force-app/main/default/objects/IT_Request__c/fields/IT_SDD_Fiscal_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Fiscal_Code__c</fullName>
    <label>SDD Fiscal Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>