force-app/main/default/objects/IT_Request__c/fields/IT_SDD_Payment__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SDD Payment</label>
    <type>Checkbox</type>
</CustomField>