force-app/main/default/objects/IT_Request__c/fields/IT_SDD_Payment_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Payment_Code__c</fullName>
    <label>SDD Payment Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>134</fullName>
                <label>SEPA 30 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>144</fullName>
                <label>SEPA 60 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>145</fullName>
                <label>SEPA 30 DAYS INVOICE DATE END OF THE MONTH</label>
            </value>
            <value>
                <fullName>146</fullName>
                <label>SEPA 60 DAYS INVOICE DATE END OF THE MONTH</label>
            </value>
            <value>
                <fullName>147</fullName>
                <label>SEPA A 30 DAY BILLING MONTH</label>
            </value>
            <value>
                <fullName>148</fullName>
                <label>SEPA 5TH DAYS OF NEXT MONTH 3rd. INVOICE DATE</label>
            </value>
            <value>
                <fullName>149</fullName>
                <label>SEPA 90 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>SEPA 90 DAYS INVOICE DATE END OF THE MONTH</label>
            </value>
            <value>
                <fullName>152</fullName>
                <label>SEPA 120 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>153</fullName>
                <label>60 SEPA DD DATE INVOICE + 15</label>
            </value>
            <value>
                <fullName>155</fullName>
                <label>SEPA 8 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>156</fullName>
                <label>SEPA 15 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>157</fullName>
                <label>SEPA 45 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>169</fullName>
                <label>SEPA 45 DAYS INVOICE RECEPTION</label>
            </value>
            <value>
                <fullName>179</fullName>
                <label>SEPA 30 DAYS OF RECEIPT OF INVOICE</label>
            </value>
            <value>
                <fullName>181</fullName>
                <label>SEPA 45 DAYS INVOICE DATE END OF THE MONTH</label>
            </value>
            <value>
                <fullName>209</fullName>
                <label>SEPA DD DT 45 BILL END MONTH 10 + GG</label>
            </value>
            <value>
                <fullName>213</fullName>
                <label>SEPA DD DT 60 BILL END MONTH 10 + GG</label>
            </value>
            <value>
                <fullName>218</fullName>
                <label>0 SDD B2B DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>221</fullName>
                <label>SDD CORE 0 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>222</fullName>
                <label>SDD CORE 30 DAYS INVOICE DATE END OF THE MONTH</label>
            </value>
            <value>
                <fullName>223</fullName>
                <label>SDD B2B 150 DAYS INVOICE DATE</label>
            </value>
            <value>
                <fullName>226</fullName>
                <label>SDD B2B 60 GG INVOICE DATE END MONTH</label>
            </value>
            <value>
                <fullName>227</fullName>
                <label>SDD B2B 30 GG INVOICE DATE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>