force-app/main/default/objects/IT_Request__c/fields/IT_SDD_Subscription_Date_F__c.field-meta.xml
<CustomField>
    <fullName>IT_SDD_Subscription_Date_F__c</fullName>
    <formula>IF( IT_SDD_Subscription_Date__c!= null , IT_SDD_Subscription_Date__c,    IT_Financial_Center__r.ER_Bank_Account__r.IT_SDD_Subscription_Date__c  )</formula>
    <label>SDD Subscription Date F</label>
    <type>Date</type>
</CustomField>