force-app/main/default/objects/IT_Request__c/fields/IT_Sestiere_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_Sestiere_Code__c</fullName>
    <label>Sestiere Code</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>