force-app/main/default/objects/IT_Request__c/fields/IT_Short_Company_Name_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Short_Company_Name_F__c</fullName>
    <formula>IF( IT_Short_Company_Name__c != null, IT_Short_Company_Name__c,  IT_Financial_Center__r.IT_Short_Name__c  )</formula>
    <label>Short Company Name F</label>
    <type>Text</type>
</CustomField>