force-app/main/default/objects/IT_Request__c/fields/IT_Sign_Sending_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Sign_Sending_Date__c</fullName>
    <label>Sign Sending Date</label>
    <type>Date</type>
</CustomField>