force-app/main/default/objects/IT_Request__c/fields/IT_Standard_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>IT_Standard_Master_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Master Data</label>
    <type>Checkbox</type>
</CustomField>