force-app/main/default/objects/IT_Request__c/fields/IT_Street__c.field-meta.xml
<CustomField>
    <fullName>IT_Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>