force-app/main/default/objects/IT_Request__c/fields/IT_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Street_Number__c</fullName>
    <label>Street Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>