force-app/main/default/objects/IT_Request__c/fields/IT_Supply_Conditions__c.field-meta.xml
<CustomField>
    <fullName>IT_Supply_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply Conditions</label>
    <type>Checkbox</type>
</CustomField>