force-app/main/default/objects/IT_Request__c/fields/IT_Term_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Term_Type__c</fullName>
    <label>Term Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
                <label>BUSINESS</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>SOLAR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>