force-app/main/default/objects/IT_Request__c/fields/IT_Transport_Cost__c.field-meta.xml
<CustomField>
    <fullName>IT_Transport_Cost__c</fullName>
    <label>Transport Cost</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IT_Transport_Cost</valueSetName>
    </valueSet>
</CustomField>