force-app/main/default/objects/IT_Request__c/fields/IT_Transport_Cost_F__c.field-meta.xml
<CustomField>
    <fullName>IT_Transport_Cost_F__c</fullName>
    <formula>IF( NOT(ISPICKVAL (  IT_Transport_Cost__c  , &#39;&#39;)) , TEXT (IT_Transport_Cost__c  ) , TEXT(  IT_Financial_Center__r.IT_Contract__r.IT_Transport_Cost__c  ) )</formula>
    <label>Transport Cost F</label>
    <type>Text</type>
</CustomField>