force-app/main/default/objects/IT_Request__c/fields/IT_Transport_Cost_Presence__c.field-meta.xml
<CustomField>
    <fullName>IT_Transport_Cost_Presence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport Cost Presence</label>
    <type>Checkbox</type>
</CustomField>