force-app/main/default/objects/IT_Request__c/fields/IT_Type_Extradiscount__c.field-meta.xml
<CustomField>
    <fullName>IT_Type_Extradiscount__c</fullName>
    <label>Type Extradiscount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>AT THE END OF THE YEAR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>