force-app/main/default/objects/IT_Request__c/fields/IT_User_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>IT_User_Authorization_Code__c</fullName>
    <label>User Authorization Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>