force-app/main/default/objects/IT_Request__c/fields/IT_UTA_Monthly_Limit__c.field-meta.xml
<CustomField>
    <fullName>IT_UTA_Monthly_Limit__c</fullName>
    <label>UTA Monthly Limit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>