force-app/main/default/objects/IT_Request__c/fields/IT_UTA_Vehicles_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_UTA_Vehicles_Number__c</fullName>
    <label>UTA Vehicles Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>